--- a/style.css
+++ b/style.css
@@ -69,14 +69,15 @@
     }
     .category-gallery li h4 {
        position:absolute;
-       display: block;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
        width: 100%;
        height: 100%;
        left: 0;
        top: 0;
        margin: 0;
-       text-align:center;
-
     }
     .closeBtn{
         color: rgba(211, 211, 211, 0.644);
