--- a/style.css
+++ b/style.css
@@ -112,6 +112,12 @@
         width: 70vw;
         max-width: 950px;
     }
+    .slide12{
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 850px;
+    }
         /** IDs **/
     #about-photo{
         position:relative;
@@ -147,7 +153,7 @@
     .primary-content-grid .button:hover .buttonInfo{
         color:black;
     }
-    .closeBtn:hover{
+    .closeBtn:hover, .closeBtn2:hover{
         cursor: pointer;
         color: black;
     }
