--- a/style.css
+++ b/style.css
@@ -25,24 +25,36 @@ h1{
 .main-image p{
     float: right;
 }
-.images img{
+.p-images img,
+.d-images img,
+.o-images img,
+.s-images img{
     width: 100%;
+    cursor: pointer;
 }
-.images{
-    margin-left: 2%;
+.p-images,
+.d-images,
+.o-images,
+.s-images{
+    margin-left: 1%;
+    margin-right: 1%;
     margin-top: 1%;
+    width: 70%;
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-gap: 5px;
 }
 .light-box{
     width: 80vw;
     height: 83vh;
-    background-color: rgba(240, 240, 240);
+    background-color:white;
+}
+.current-image-info{
+    font-size: 1.4vw;
 }
 /** Page Navigation **/
 .links{
-    position: absolute;
+    position: fixed;
     margin-top: 150px;
     list-style-type: none;
     text-decoration: none;
@@ -168,6 +180,7 @@ h1{
     top: 150px;
     left: 180px;
 }
+
 
 /*current drawings gallery*/
 #currentDrawingLightBox{
